# notfiles

./: .gitignore  CLAUDE.md  Cargo.toml  HANDOFF.md  LICENSE-APACHE  LICENSE-MIT  README.md
.gitea/workflows/: public-ready.yml
crates/notcore/: Cargo.toml
crates/notcore/src/: config.rs  error.rs  lib.rs  paths.rs  types.rs
crates/notfiles/: Cargo.toml
crates/notfiles/src/: ignore.rs  lib.rs  linker.rs  main.rs  package.rs  status.rs
crates/nothooks/: Cargo.toml
crates/nothooks/src/: lib.rs  main.rs  runner.rs  state.rs
crates/nothooks/tests/: integration.rs
crates/notsecrets/: Cargo.toml
crates/notsecrets/src/: lib.rs
crates/notsecrets/src/sources/: bitwarden.rs  file.rs  mod.rs  prompt.rs
crates/notsecrets/tests/: integration.rs
crates/notstrap/: Cargo.toml
crates/notstrap/src/: lib.rs  main.rs  prereqs.rs  repo.rs
docs/superpowers/plans/: 2026-03-31-notfiles-workspace.md  2026-04-01-integration-tests.md
docs/superpowers/specs/: 2026-03-31-notfiles-workspace-architecture-design.md  2026-04-01-integration-tests-design.md
src/: cli.rs  config.rs  ignore.rs  linker.rs  main.rs  package.rs  paths.rs  status.rs
tests/: integration.rs
tests/integration/: Cargo.toml
tests/integration/tests/: bootstrap.rs  cross_crate.rs
