[package]
name = "notfiles"
version = "0.1.0"
edition = "2024"
description = "A modern dotfiles manager — a pure Rust alternative to GNU Stow"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
thiserror = "2"
anyhow = "1"
globset = "0.4"
dirs = "6"
chrono = { version = "0.4", default-features = false, features = ["clock"] }

[dev-dependencies]
tempfile = "3"
assert_fs = "1"
