[package]
name    = "notsecrets"
version = "0.1.0"
edition = "2024"
license.workspace = true

[dependencies]
notcore    = { workspace = true }
anyhow     = { workspace = true }
thiserror  = { workspace = true }
which      = { workspace = true }
rpassword  = { workspace = true }
dirs       = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
